--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier . --write && npm run lint"
   },
   "dependencies": {
-    "next": "14.2.13",
+    "@tailwindcss/postcss": "^4.1.10",
+    "next": "^14.2.30",
+    "postcss": "^8.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.3.4",
     "prettier": "^3.3.3"
   }
 }
